# GTK_Graphing_App

./: CMakeLists.txt  graph.hpp  main.cpp  parseInterface.hpp
UI/: equation_graph.hpp
